--- a/app/views/calculoTabuada.ejs
+++ b/app/views/calculoTabuada.ejs
@@ -18,8 +18,8 @@
 		   <tbody>
 		   	<% for (var i=1; i<=10; i++){%>
 				<tr>
-					<td><%=numero%>x<%=1%></td>
-					<td><%=numero* i%></td>
+					<td><%=numero%> x <%=i%></td>
+					<td><%=numero * i%></td>
 				</tr>
 				<% } %>
 			</tbody>
